--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 DiscHubApp/DiscHub/
 .gradle/2.14.1/taskArtifacts/cache.properties.lock
 *.bin
+.gradle/2.14.1/taskArtifacts/cache.properties.lock
+*.bin
